# nlp-iasa

./: pyproject.toml
notebooks/: adversarial_validation.ipynb  clustering.ipynb  eda-feedback.ipynb  feedback_prize_inference.ipynb  feedback_prize_submission.ipynb  feedback_prize_train.ipynb  lab1-nlp-ner.ipynb
src/cfg/: longformer.yaml  modern_bert.yaml
src/trainings/: feedback_prize.py
src/utils/: hf_utils.py  ner_utils.py
