[project]
name = "nlp-iasa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==0.26.0",
    "datasets==3.3.2",
    "evaluate==0.4.3",
    "hydra-core==1.3.2",
    "ipython==9.0.2",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "pip==25.0.1",
    "plotly==6.0.0",
    "pre-commit==4.1.0",
    "seqeval==1.2.2",
    "spacy==3.8.4",
    "torch==2.6.0",
    "transformers==4.49.0",
    "wandb==0.18.6",
]
